fix: update style

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: white;
+  width: 100% !important;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -26,6 +27,7 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
+  width: 100% !important;
   min-width: 320px;
   min-height: 100vh;
 }
